--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -27,7 +27,7 @@
 
     <!-- String match strategies -->
     <string name="string_match_strategy_substring">通常</string>
-    <string name="string_match_strategy_skipped_substring">一部一致 （例： &quot;abd&quot; で &quot;abcdef&quot; がヒット）</string>
+    <string name="string_match_strategy_skipped_substring">一部一致 （例： \"abd\" で \"abcdef\" がヒット）</string>
 
     <!-- Notification for OS -->
     <string name="notification_launch_this_app">Blue Line Console を起動</string>
@@ -77,7 +77,7 @@
     <string name="preferences_url_add_button">URL 追加</string>
 
     <!-- Error messages, user errors -->
-    <string name="error_invalid_url_least_validation_for_web">URL の形式が不正です： https:// か http:// で始まり、もう一つ以上スラッシュ ("/") を含む必要があります</string>
+    <string name="error_invalid_url_least_validation_for_web">URL の形式が不正です： https:// か http:// で始まり、もう一つ以上スラッシュ (\"/\") を含む必要があります</string>
     <string name="error_invalid_url_command_name">コマンドはアルファベットの小文字と数字だけを含むことができ、一文字以上である必要があります。</string>
     <string name="error_empty_display_name">表示名が空です。</string>
 
