--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -39,11 +39,15 @@
     <string name="button_delete">削除</string>
     <string name="button_close">閉じる</string>
 
+    <!-- Preferences general notes -->
+    <string name="note_take_effect_after_restart">Blue Line Console の再起動後に反映されます。</string>
+
     <!-- Preferences, titles for headers and footers -->
     <string name="preferences_title_for_header_and_footer">Configuration</string>
     <string name="preferences_title_for_header_and_footer_url">URL</string>
     <string name="preferences_title_for_header_and_footer_add_custom_urls">Add URL</string>
     <string name="preferences_title_for_header_and_footer_edit_custom_urls">Edit URL</string>
+    <string name="preferences_title_for_header_and_footer_accent_color">Accent Color</string>
 
     <!-- Preferences categories, main screen -->
     <string name="preferences_category_main">一般</string>
@@ -61,6 +65,7 @@
     <string name="preferences_item_text_match_strategy_title">検索時の文字列マッチ</string>
     <string name="preferences_item_appearance_theme_title">テーマ</string>
     <string name="preferences_item_appearance_theme_summary">テーマを変更すると、 Blue Line Console が再起動します。</string>
+    <string name="preferences_item_appearance_accent_color">アクセント カラー</string>
     <string name="preferences_item_appearance_animation_title">アニメーション</string>
     <string name="preferences_item_apps_show_package_name_title">パッケージ名を表示</string>
     <string name="preferences_item_apps_show_package_name_summary">註：このチェックがオフでも、パッケージ名の一部でアプリを検索できます。</string>
@@ -75,6 +80,14 @@
     <string name="preferences_url_column_url">URL</string>
     <string name="preferences_url_column_has_query">検索エンジン（有効にするとクエリが URL 末尾に追加されます）</string>
     <string name="preferences_url_add_button">URL 追加</string>
+
+    <!-- Preferences items, accent color screens -->
+    <string name="preferences_accent_color_theme_default">テーマの初期設定</string>
+    <string name="preferences_accent_color_custom">色を設定</string>
+    <string name="preferences_accent_color_red">赤</string>
+    <string name="preferences_accent_color_green">緑</string>
+    <string name="preferences_accent_color_blue">青</string>
+    <string name="preferences_accent_color_theme_without_accent_color">ご利用中のテーマ（%1$s）ではアクセントカラーの変更はできません。</string>
 
     <!-- Error messages, user errors -->
     <string name="error_invalid_url_least_validation_for_web">URL の形式が不正です： https:// か http:// で始まり、もう一つ以上スラッシュ (\"/\") を含む必要があります</string>
