--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -38,12 +38,18 @@
     <string name="button_update">更新</string>
     <string name="button_delete">删除</string>
     <string name="button_close">关闭</string>
+	<string name="button_increment_minimal">+</string>
+    <string name="button_decrement_minimal">-</string>
+	
+	<!-- Preferences general notes -->
+    <string name="note_take_effect_after_restart">This setting takes effect after restarting Blue Line Console.</string>
 
     <!-- Preferences, titles for headers and footers -->
     <string name="preferences_title_for_header_and_footer">配置</string>
     <string name="preferences_title_for_header_and_footer_url">URL</string>
     <string name="preferences_title_for_header_and_footer_add_custom_urls">添加 URL</string>
     <string name="preferences_title_for_header_and_footer_edit_custom_urls">编辑 URL</string>
+	<string name="preferences_title_for_header_and_footer_accent_color">Accent Color</string>
 
     <!-- Preferences categories, main screen -->
     <string name="preferences_category_main">一般</string>
@@ -61,6 +67,7 @@
     <string name="preferences_item_text_match_strategy_title">文本搜索匹配样式</string>
     <string name="preferences_item_appearance_theme_title">主题</string>
     <string name="preferences_item_appearance_theme_summary">更改此选项时，Blue Line Console 会立即重新启动。</string>
+	<string name="preferences_item_appearance_accent_color">Accent color</string>
     <string name="preferences_item_appearance_animation_title">动画</string>
     <string name="preferences_item_apps_show_package_name_title">显示包名</string>
     <string name="preferences_item_apps_show_package_name_summary">注意:即使关闭了这个选项，你也可以通过包名的一部分找到应用程序。</string>
@@ -75,6 +82,14 @@
     <string name="preferences_url_column_display_name">展示名称</string>
     <string name="preferences_url_column_url">URL</string>
     <string name="preferences_url_column_has_query">搜索引擎(启用后，查询将被添加在末尾)</string>
+	
+	<!-- Preferences items, accent color screens -->
+    <string name="preferences_accent_color_theme_default">Theme default</string>
+    <string name="preferences_accent_color_custom">Customize color</string>
+    <string name="preferences_accent_color_red">Red</string>
+    <string name="preferences_accent_color_green">Green</string>
+    <string name="preferences_accent_color_blue">Blue</string>
+    <string name="preferences_accent_color_theme_without_accent_color">Current theme (%1$s) does not support changing accent color.</string>
 
     <!-- Error messages, user errors -->
     <string name="error_invalid_url_least_validation_for_web">无效的 URL：必须以 https:// 或 http:// 开头且至少再多一条斜杠(\"/\").</string>
@@ -89,6 +104,7 @@
     <string name="startup_help_title_for_header_and_footer">通知</string>
     <string name="startup_help_title">关于“help” 命令</string>
     <string name="startup_help_body_part1">要显示用法，输入</string>
+    
     <string name="startup_help_body_part3">看看该怎么用。</string>
     <string name="startup_help_check_never_later">不再显示这条消息</string>
 
