--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -71,7 +71,7 @@
     <string name="preferences_item_appearance_animation_title">动画</string>
     <string name="preferences_item_apps_show_package_name_title">显示包名</string>
     <string name="preferences_item_apps_show_package_name_summary">注意:即使关闭了这个选项，你也可以通过包名的一部分找到应用程序。</string>
-    <string name="preferences_item_display_custom_urls_title">Web pages and searches</string>
+    <string name="preferences_item_display_custom_urls_title">网页和搜索</string>
     <string name="preferences_item_default_search_title">默认搜索引擎</string>
     <string name="preferences_item_default_search_summary">总是在列表的底部显示特定的搜索引擎</string>
     <string name="preferences_item_default_search_option_none">（无）</string>
@@ -82,10 +82,10 @@
     <string name="preferences_url_column_display_name">展示名称</string>
     <string name="preferences_url_column_url">URL</string>
     <string name="preferences_url_column_has_query">搜索引擎(启用后，查询将被添加在末尾)</string>
-    <string name="preferences_url_property_enabled">Enabled</string>
-    <string name="preferences_url_property_disabled">Disabled</string>
-    <string name="preferences_url_property_preset">Preset</string>
-    <string name="preferences_url_varies_with_locale">Varies with device language setting</string>
+    <string name="preferences_url_property_enabled">已启用</string>
+    <string name="preferences_url_property_disabled">已禁用</string>
+    <string name="preferences_url_property_preset">预设</string>
+    <string name="preferences_url_varies_with_locale">随设备语言设置而变化</string>
 
     <!-- Preferences items, accent color screens -->
     <string name="preferences_accent_color_theme_default">主题默认</string>
