Add options for IMEs

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -56,6 +56,7 @@
     <string name="preferences_category_appearance">外观</string>
     <string name="preferences_category_apps">启动应用</string>
     <string name="preferences_category_urls">网页和搜索</string>
+    <string name="preferences_category_advanced">Advanced</string>
 	
     <!-- Preferences items, main screen -->
     <string name="preferences_item_main_show_startup_help_title">应用启动时显示帮助</string>
@@ -75,6 +76,10 @@
     <string name="preferences_item_default_search_title">默认搜索引擎</string>
     <string name="preferences_item_default_search_summary">总是在列表的底部显示特定的搜索引擎</string>
     <string name="preferences_item_default_search_option_none">（无）</string>
+    <string name="preferences_item_advanced_main_edittext_flagforceascii_title">Set IME_FLAG_FORCE_ASCII flag on command input window</string>
+    <string name="preferences_item_advanced_main_edittext_flagforceascii_summary">IME_FLAG_FORCE_ASCII is intended to use ASCII characters for input. Behavior differs between IMEs.</string>
+    <string name="preferences_item_advanced_main_edittext_hint_locale_english_title">Notify IME as English input on command input window</string>
+    <string name="preferences_item_advanced_main_edittext_hint_locale_english_summary">Command input window uses setImeHintLocales and sets to English locale. Behavior differs between IMEs.</string>
 
     <!-- Preferences items, URL screens -->
     <string name="preferences_url_add_button">添加自定义 URL 或搜索引擎</string>
