--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -12,8 +12,8 @@
     <string name="calculator_precision_no_error">无差错</string>
     <string name="calculator_precision_rounding">进位舍入</string>
     <string name="calculator_error_division_by_zero">除以 0</string>
-    <string name="calculator_error_unit_conversion_failure">Cannot convert \"%1$s\" to \"%2$s\"</string>
-
+	<string name="calculator_error_unit_conversion_failure">无法将 \"%1$s\" 转换为 \"%2$s\"</string>
+    
     <!-- Command searcher texts for results -->
     <string name="result_search_query_on_engine_format">在 %2$s 上搜索 \"%1$s\"</string>
     <string name="result_static_webpage_format">访问 %1$s</string>
@@ -57,7 +57,7 @@
     <string name="preferences_category_appearance">外观</string>
     <string name="preferences_category_apps">启动应用</string>
     <string name="preferences_category_urls">网页和搜索</string>
-    <string name="preferences_category_advanced">高级</string>
+	<string name="preferences_category_advanced">高级</string>
 	
     <!-- Preferences items, main screen -->
     <string name="preferences_item_main_show_startup_help_title">应用启动时显示帮助</string>
@@ -77,7 +77,7 @@
     <string name="preferences_item_default_search_title">默认搜索引擎</string>
     <string name="preferences_item_default_search_summary">总是在列表的底部显示特定的搜索引擎</string>
     <string name="preferences_item_default_search_option_none">（无）</string>
-    <string name="preferences_item_advanced_main_edittext_hint_locale_english_title">在命令输入窗口上通知英语输入到键盘输入软件</string>
+	<string name="preferences_item_advanced_main_edittext_hint_locale_english_title">在命令输入窗口上通知英语输入到键盘输入软件</string>
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_summary">命令输入窗口使用 setImeHintLocales 并设为英语语言环境。不同的键盘输入软件有不同的行为。</string>
     <string name="preferences_item_advanced_main_edittext_flagforceascii_title">在命令输入窗口上设置 IME_FLAG_FORCE_ASCII  标志</string>
     <string name="preferences_item_advanced_main_edittext_flagforceascii_summary">IME_FLAG_FORCE_ASCII 表示打算使用 ASCII 字符进行输入。不同的键盘输入软件有不同的行为。</string>
@@ -103,7 +103,7 @@
 
     <!-- Error messages, user errors -->
     <string name="error_invalid_url_least_validation_for_web">无效的 URL：必须以 https:// 或 http:// 开头且至少再多一条斜杠(\"/\").</string>
-    <string name="error_invalid_url_command_name">无效名称：命令不能包含空格且不能为空</string>
+    <string name="error_invalid_url_command_name">无效的名称：命令不能包含空格，且不能为空</string>
     <string name="error_empty_display_name">显示名称为空</string>
 
     <!-- Error messages, system errors -->
@@ -125,7 +125,7 @@
         \n-&#032;应用名称的一部分（比如，Blue Line Console）
         \n-&#032;包名的一部分（比如，net.nhiroki.bluelineconsole）
         \n-&#032;URL（比如，https://example.com/）
-        \n-&#032;算数计算（比如， 2+3*5, 1inch in cm, 1m+1inch, 1m+1inch in cm）
+        \n-&#032;计算公式 （比如， 2+3*5, 1 英寸等于多少厘米, 1 米+1 英寸, 1 米加 1 英寸等于多少厘米）
         \n-&#032;下列命令之一 （比如，help）
         \n
         \n可用命令：
